--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://pro.fontawesome.com/releases/v6.0.0-beta2/css/all.css">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" type="image/ico" href="favicon.ico">
     <title>Syhix's Home Page</title>
 </head>
 
