--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" type="image/ico" href="favicon.ico">
     <title>Syhix's Home Page</title>
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="Syhix's Home Page">
+    <meta property="og:url" content="https://syhix.github.io/Syhix.tv">
+    <meta property="og:image" content="https://syhix.github.io/Syhix.tv/favicon.ico">
+    <meta property="profile:first_name" content="">
+    <meta property="profile:last_name" content="">
+    <meta property="profile:username" content="Syhix">
 </head>
 
 <body>
