--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://pro.fontawesome.com/releases/v6.0.0-beta2/css/all.css">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" type="image/ico" href="favicon.ico">
-    <title>Syhix's Home Page</title>
-    <meta property="og:type" content="profile">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Syhix Home Page</title>
+    <meta name="author" content="@SyhixTV">
+    <meta name="copyright" content="Syhix 2022">
+    <meta property="og:type" content="website">
+    <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Syhix's Home Page">
     <meta property="og:url" content="https://syhix.github.io/Syhix.tv">
     <meta property="og:image" content="https://syhix.github.io/Syhix.tv/favicon.ico">
-    <meta property="profile:first_name" content="">
-    <meta property="profile:last_name" content="">
-    <meta property="profile:username" content="Syhix">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@syhixTV">
+
+
+
 </head>
 
 <body>
