--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/style.css">
-    <title>Syhix</title>
+    <link rel="stylesheet" type="text/css" href="https://pro.fontawesome.com/releases/v6.0.0-beta2/css/all.css">
+    <title>Syhix - Home</title>
 </head>
 <body id="syhix">
     <header>
-        <div class="title">
-            <h1>Syhix.tv Home Page</h1>
-        </div>
+        <nav class="nav-medias">
+            <div class="title">Syhix</div>
+            <div class="medias">
+                <div class="media">
+                    <a href="https://discord.com/users/365541519173877771" target="_blank"><i class="fa-brands fa-discord"></i></a>
+                    <a href="https://github.com/Syhix" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://instagram.com/SyhixTV" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://twitch.tv/SyhixTV" target="_blank"><i class="fa-brands fa-twitch"></i></a>
+                    <a href="https://twitter.com/SyhixTV" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://youtube.com/channel/UC5Dzfki1WRbFX2KHiT0SLbg" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </nav>
     </header>
     <main id="content"></main>
     <footer>
