--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="https://pro.fontawesome.com/releases/v6.0.0-beta2/css/all.css">
-    <title>Syhix - Home</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <link rel="icon" type="image/ico" href="favicon.ico">
+    <title>Syhix Home Page</title>
+    <meta name="author" content="@SyhixTV">
+    <meta name="copyright" content="Syhix 2022">
+    <meta property="og:type" content="website">
+    <meta name="theme-color" content="#a52b81">
+    <meta property="og:title" content="Syhix's Home Page">
+    <meta property="og:url" content="https://syhix.github.io/Syhix.tv">
+    <meta property="og:image" content="https://syhix.github.io/Syhix.tv/assets/img/syhix.png">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@syhixTV">
 </head>
 <body id="syhix">
     <header>
