--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="@SyhixTV">
     <meta name="copyright" content="Syhix 2022">
     <meta property="og:type" content="website">
-    <meta name="theme-color" content="#a52b81">
+    <meta name="theme-color" content="#c1009a">
     <meta property="og:title" content="Syhix's Home Page">
     <meta property="og:url" content="https://syhix.github.io/Syhix.tv">
     <meta property="og:image" content="https://syhix.github.io/Syhix.tv/assets/img/syhix.png">
