--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
                 </div>
             </div>
         </nav>
+        <div class="giscus">
+            <script src="https://giscus.app/client.js"
+            data-repo="Syhix/Syhix.tv"
+            data-repo-id="R_kgDOHakrfQ"
+            data-category="General"
+            data-category-id="DIC_kwDOHakrfc4CPeKa"
+            data-mapping="og:title"
+            data-reactions-enabled="1"
+            data-emit-metadata="0"
+            data-input-position="bottom"
+            data-theme="light"
+            data-lang="fr"
+            crossorigin="anonymous"
+            async>
+        </script>
+        </div>
     </div>
 </body>
 
