--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             data-reactions-enabled="1"
             data-emit-metadata="0"
             data-input-position="bottom"
-            data-theme="light"
+            data-theme="dark"
             data-lang="fr"
             crossorigin="anonymous"
             async>
