--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="https://pro.fontawesome.com/releases/v6.0.0-beta2/css/all.css">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" type="image/ico" href="favicon.ico">
-    <title>Syhix Home Page</title>
+    <title>Syhix.TV - Home Page</title>
     <meta name="author" content="@SyhixTV">
-    <meta name="copyright" content="Syhix 2022">
     <meta property="og:type" content="website">
-    <meta name="theme-color" content="#a52b81">
-    <meta property="og:title" content="Syhix's Home Page">
-    <meta property="og:url" content="https://syhix.github.io/Syhix.tv">
-    <meta property="og:image" content="https://syhix.github.io/Syhix.tv/assets/img/syhix.png">
+    <meta name="theme-color" content="#8f0070">
+    <meta property="og:title" content="Syhix.TV - Home Page">
+    <meta property="og:description" content="Imagine a place... wait?! Welcome on Syhix.TV"/>
+    <meta property="og:url" content="https://syhix.tv">
+    <meta property="og:image" content="https://syhix.tv/assets/img/syhix.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@syhixTV">
 
@@ -25,8 +25,8 @@
 
 <body>
     <div class="content">
-        <h1 class="head">Syhix's Home Page</h1>
-        <span>Work in progress.</span>
+        <h1 class="head">Syhix.TV - Home Page</h1>
+        <span>Imagine a place... wait?! Welcome on Syhix.TV</span>
         <nav class="nav-medias">
             <div class="medias">
                 <div class="media">
@@ -45,7 +45,8 @@
             data-repo-id="R_kgDOHakrfQ"
             data-category="General"
             data-category-id="DIC_kwDOHakrfc4CPeKa"
-            data-mapping="og:title"
+            data-mapping="number"
+            data-term="3"
             data-reactions-enabled="1"
             data-emit-metadata="0"
             data-input-position="bottom"
