--- a/minesr.html
+++ b/minesr.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Syhix.TV - Obtenez -5% de réduction avec le code MCCOMMUNITY.</title>
+        <title>Redirection en cours...</title>
         <meta name="theme-color" content="#009b72">
         <meta property="og:title" content="Obtenez -5% de réduction avec le code MCCOMMUNITY.">
         <meta property="og:description" content="Avec le code de réduction MCCOMMUNITY vous aurez -5% sur votre achat sur toutes les offres disponibles.
@@ -18,6 +18,10 @@
     </head>
 </head>
 <body>
-    
+    <script>
+        setTimeout(function(){
+           window.location.href = 'http://minesr.syhix.tv';
+        }, 2000);
+     </script>
 </body>
 </html>
