--- a/minesr.html
+++ b/minesr.html
@@ -5,7 +5,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Redirection en cours...</title>
+        <title>Syhix.TV</title>
+        <link rel="stylesheet" href="assets/promo.css">
         <meta name="theme-color" content="#009b72">
         <meta property="og:title" content="Obtenez -5% de réduction avec le code MCCOMMUNITY.">
         <meta property="og:description" content="Avec le code de réduction MCCOMMUNITY vous aurez -5% sur votre achat sur toutes les offres disponibles.
@@ -20,8 +21,34 @@
 <body>
     <script>
         setTimeout(function(){
-           window.location.href = 'http://minesr.syhix.tv';
-        }, 2000);
+        //   window.location.href = 'http://minesr.syhix.tv';
+        //    window.location.href = '/minesr.html';
+        }, 3000);
      </script>
+     <!-- <div class="promo">
+        <div class="promo-card">
+            <img src="https://minestrator.com/assets/img/minestrator-new-2021.png" draggable="false" alt="">
+            <div class="pcontent">
+                <img src="/assets/img/616373152598982675.gif" draggable="false" alt=""> Vous allez être redirigé vers le site de MineStrator
+            </div>
+            <span>Avec le code <strong>MCCOMMUNITY</strong> obtenez -5% de réduction sur l'achat d'un serveur Minecraft.</span>
+        </div>
+     </div> -->
+     <div class="main">
+        <div class="card">
+            <div class="content">
+                <header>
+                    <div class="logos"><img class="logo" src="https://minestrator.com/assets/img/minestrator-new-2021.png" alt=""></div>
+                </header>
+                <main>
+                    <div>
+                        <i class="icons loading"></i>
+                        <span>Vous allez être redirigé vers le site de MineStrator</span>
+                    </div>
+                    <span>Avec le code <strong>MCCOMMUNITY</strong> obtenez -5% de réduction sur l'achat d'un serveur Minecraft.</span>
+                </main>
+            </div>
+        </div>
+     </div>
 </body>
 </html>
