--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <h1 class="head">Syhix.TV</h1>    
         </div>
-        <span>Imagine a place... wait?! Welcome on Syhix.TV</span>
+        <span>Welcome on Syhix.TV</span>
         <nav class="nav-medias">
             <div class="">
                 <div class="media">
