Import table forge

--- a/minecraft/forge/index.html
+++ b/minecraft/forge/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>Minecraft Forge Files</title>
+    <!-- IMPORT MCVANILLA -->
+    <link rel="stylesheet" href="/assets/style.css">
+    <title>Minecraft Vanilla - Forge list</title>
 </head>
+
 <body>
+    <input type="search" placeholder="Search version by ID">
     <table>
         <tr>
-            <th>Version</th>
-            <th>affect version</th>
-            <th>Date</th>
-            <th>Download</th>
+            <th>id</th>
+            <th>version</th>
+            <th>dateTime</th>
+            <th>url</th>
         </tr>
     </table>
 </body>
 <script src="app.js"></script>
+
 </html>
