--- a/minecraft/forge/index.html
+++ b/minecraft/forge/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- IMPORT MCVANILLA -->
     <link rel="stylesheet" href="/assets/style.css">
-    <title>Minecraft Vanilla - Forge list</title>
+    <title>Minecraft Forge Files</title>
 </head>
 
 <body>
