--- a/minecraft/live/index.html
+++ b/minecraft/live/index.html
@@ -24,6 +24,6 @@
 
     </div>
     <div class="deux">
-        <h1 id="time">2023</h1>
+        <h1 id="time">loading</h1>
     </div>
     <script src="js.js"></script>
