--- a/minecraft/live/index.html
+++ b/minecraft/live/index.html
@@ -3,27 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Minecraft Live 2023</title>
-    <link rel="shortcut icon" href="https://cdn.discordapp.com/emojis/991784177693364435.gif" type="image/x-icon">
-    <style>
-        html {background-color: #cb1716; color: white;}
-        div {display: flex;	align-content: center; justify-content: center;	align-items: center;}
-        img {height: 500px; padding: 50px 0;}
-        .deux {font-family: MinecraftTen; font-size: 100px;}
-
-        @font-face {
-	font-family: MinecraftTen;
-	src: url("/assets/fonts/MinecraftTen.ttf") format("truetype");
-	font-weight: bold;
-	font-display: swap;
-}
-
-    </style>
-    <div>
-        <img src="Minecraft_live.png" alt="" srcset="">
-
-    </div>
-    <div class="deux">
-        <h1 id="time">loading</h1>
+</head>
+<body>
+    <!-- <div class="image">
+        <img src="Minecraft_live.png" alt="">
+    </div> -->
+    <div class="card">
+        <div class="borderimage">
+            <div class="content">
+                <span id="time">loading</span>
+            </div>
+        </div>
     </div>
     <script src="js.js"></script>
+</body
